# copyit

backend/api-server/: go.mod  go.sum  main.go
backend/api-server/internal/: models.go
backend/api-server/internal/common/db/: postgres.go
backend/api-server/internal/env/: env.go
backend/api-server/internal/handlers/authHandler/: auth.go
backend/api-server/internal/lib/: auth.go  log.go  response.go
backend/api-server/internal/router/: routes.go
backend/trading-engine/: Cargo.toml
backend/trading-engine/migrations/: 001_init_models.sql
backend/trading-engine/src/: api.rs  channel.rs  cron.rs  error.rs  main.rs  models.rs
backend/trading-engine/src/detector/: mod.rs
backend/trading-engine/src/engine/: executor.rs  grouper.rs  leaderboard.rs  mod.rs  monitor.rs  parser.rs
backend/trading-engine/src/hyperliquid/: mod.rs  perps.rs  ws.rs
backend/trading-engine/src/routes/: copy_configs.rs  followers.rs  leaderboard.rs  mod.rs  traders.rs  trades.rs
