[package]
name = "trading-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.1.2"
anyhow = "1.0.100"
axum = "0.8.7"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
hyperliquid_rust_sdk = "0.6.0"
log = "0.4.28"
rust_decimal = "1.39.0"
rust_decimal_macros = "1.39.0"
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = {version ="0.8.6", features = ["postgres","sqlite", "runtime-tokio", "rust_decimal", "chrono"]}
thiserror = "1.0.61"
tokio = { version = "1.48.0", features = ["full", "test-util"] }
tokio-cron-scheduler = "0.15.1"
tokio-tungstenite ={version= "0.28.0", features= ["native-tls"]}
url = "2.5.7"
